--- a/Yahoo2/nbproject/project.properties
+++ b/Yahoo2/nbproject/project.properties
@@ -27,50 +27,47 @@ dist.jar=${dist.dir}/Yahoo2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.apache-mime4j-0.6.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\apache-mime4j-0.6.jar
-file.reference.bsh-1.3.0.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\bsh-1.3.0.jar
-file.reference.cglib-nodep-2.1_3.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\cglib-nodep-2.1_3.jar
-file.reference.commons-codec-1.9.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\commons-codec-1.9.jar
-file.reference.commons-collections-3.2.1.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\commons-collections-3.2.1.jar
-file.reference.commons-exec-1.1.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\commons-exec-1.1.jar
-file.reference.commons-io-2.4.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\commons-io-2.4.jar
-file.reference.commons-jxpath-1.3.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\commons-jxpath-1.3.jar
-file.reference.commons-lang3-3.3.2.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\commons-lang3-3.3.2.jar
-file.reference.commons-logging-1.1.3.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\commons-logging-1.1.3.jar
-file.reference.cssparser-0.9.14.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\cssparser-0.9.14.jar
-file.reference.gson-2.3.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\gson-2.3.jar
-file.reference.guava-18.0.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\guava-18.0.jar
-file.reference.hamcrest-core-1.3.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\hamcrest-core-1.3.jar
-file.reference.hamcrest-library-1.3.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\hamcrest-library-1.3.jar
-file.reference.htmlunit-2.15.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\htmlunit-2.15.jar
-file.reference.htmlunit-core-js-2.15.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\htmlunit-core-js-2.15.jar
-file.reference.httpclient-4.3.4.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\httpclient-4.3.4.jar
-file.reference.httpcore-4.3.2.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\httpcore-4.3.2.jar
-file.reference.httpmime-4.3.4.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\httpmime-4.3.4.jar
-file.reference.ini4j-0.5.2.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\ini4j-0.5.2.jar
-file.reference.jcommander-1.29.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\jcommander-1.29.jar
-file.reference.jetty-websocket-8.1.8.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\jetty-websocket-8.1.8.jar
-file.reference.jna-3.4.0.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\jna-3.4.0.jar
-file.reference.jna-platform-3.4.0.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\jna-platform-3.4.0.jar
-file.reference.junit-dep-4.11.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\junit-dep-4.11.jar
-file.reference.nekohtml-1.9.21.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\nekohtml-1.9.21.jar
-file.reference.netty-3.5.7.Final.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\netty-3.5.7.Final.jar
-file.reference.operadriver-1.5.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\operadriver-1.5.jar
-file.reference.phantomjsdriver-1.1.0.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\phantomjsdriver-1.1.0.jar
-file.reference.protobuf-java-2.4.1.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\protobuf-java-2.4.1.jar
-file.reference.sac-1.3.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\sac-1.3.jar
-file.reference.selenium-java-2.44.0-srcs.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\selenium-java-2.44.0-srcs.jar
-file.reference.selenium-java-2.44.0.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\selenium-java-2.44.0.jar
-file.reference.serializer-2.7.1.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\serializer-2.7.1.jar
-file.reference.testng-6.8.5.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\testng-6.8.5.jar
-file.reference.xalan-2.7.1.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\xalan-2.7.1.jar
-file.reference.xercesImpl-2.11.0.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\xercesImpl-2.11.0.jar
-file.reference.xml-apis-1.4.01.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\selenium-2.44.0\\libs\\xml-apis-1.4.01.jar
+file.reference.apache-mime4j-0.6.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\apache-mime4j-0.6.jar
+file.reference.bsh-1.3.0.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\bsh-1.3.0.jar
+file.reference.cglib-nodep-2.1_3.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\cglib-nodep-2.1_3.jar
+file.reference.commons-codec-1.9.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\commons-codec-1.9.jar
+file.reference.commons-collections-3.2.1.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\commons-collections-3.2.1.jar
+file.reference.commons-exec-1.1.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\commons-exec-1.1.jar
+file.reference.commons-io-2.4.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\commons-io-2.4.jar
+file.reference.commons-jxpath-1.3.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\commons-jxpath-1.3.jar
+file.reference.commons-lang3-3.3.2.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\commons-lang3-3.3.2.jar
+file.reference.commons-logging-1.1.3.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\commons-logging-1.1.3.jar
+file.reference.cssparser-0.9.14.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\cssparser-0.9.14.jar
+file.reference.gson-2.3.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\gson-2.3.jar
+file.reference.guava-18.0.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\guava-18.0.jar
+file.reference.hamcrest-core-1.3.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\hamcrest-core-1.3.jar
+file.reference.hamcrest-library-1.3.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\hamcrest-library-1.3.jar
+file.reference.htmlunit-2.15.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\htmlunit-2.15.jar
+file.reference.htmlunit-core-js-2.15.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\htmlunit-core-js-2.15.jar
+file.reference.httpclient-4.3.4.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\httpclient-4.3.4.jar
+file.reference.httpcore-4.3.2.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\httpcore-4.3.2.jar
+file.reference.httpmime-4.3.4.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\httpmime-4.3.4.jar
+file.reference.ini4j-0.5.2.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\ini4j-0.5.2.jar
+file.reference.jcommander-1.29.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\jcommander-1.29.jar
+file.reference.jetty-websocket-8.1.8.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\jetty-websocket-8.1.8.jar
+file.reference.jna-3.4.0.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\jna-3.4.0.jar
+file.reference.jna-platform-3.4.0.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\jna-platform-3.4.0.jar
+file.reference.junit-dep-4.11.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\junit-dep-4.11.jar
+file.reference.nekohtml-1.9.21.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\nekohtml-1.9.21.jar
+file.reference.netty-3.5.7.Final.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\netty-3.5.7.Final.jar
+file.reference.operadriver-1.5.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\operadriver-1.5.jar
+file.reference.phantomjsdriver-1.1.0.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\phantomjsdriver-1.1.0.jar
+file.reference.protobuf-java-2.4.1.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\protobuf-java-2.4.1.jar
+file.reference.sac-1.3.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\sac-1.3.jar
+file.reference.selenium-java-2.44.0.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\selenium-java-2.44.0.jar
+file.reference.serializer-2.7.1.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\serializer-2.7.1.jar
+file.reference.testng-6.8.5.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\testng-6.8.5.jar
+file.reference.xalan-2.7.1.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\xalan-2.7.1.jar
+file.reference.xercesImpl-2.11.0.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\xercesImpl-2.11.0.jar
+file.reference.xml-apis-1.4.01.jar=C:\\Users\\aluno\\Downloads\\selenium-2.44.0\\libs\\xml-apis-1.4.01.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.selenium-java-2.44.0-srcs.jar}:\
-    ${file.reference.selenium-java-2.44.0.jar}:\
     ${file.reference.apache-mime4j-0.6.jar}:\
     ${file.reference.bsh-1.3.0.jar}:\
     ${file.reference.cglib-nodep-2.1_3.jar}:\
@@ -107,7 +104,8 @@ javac.classpath=\
     ${file.reference.testng-6.8.5.jar}:\
     ${file.reference.xalan-2.7.1.jar}:\
     ${file.reference.xercesImpl-2.11.0.jar}:\
-    ${file.reference.xml-apis-1.4.01.jar}
+    ${file.reference.xml-apis-1.4.01.jar}:\
+    ${file.reference.selenium-java-2.44.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -131,7 +129,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=yahoo2.Yahoo2
+main.class=yahoo2.JulianoNardelli
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
